bug(label & demo): Fix label making logic and demo
[ci skip]

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,5 +15,5 @@
   <link rel="import" href="../../t-shared-components/theme.html">
 </head>
 <body>
-	<t-stepper min="0" max="100" secondary-label="(>12 years)" plural-label="Adults" singular-label="Adult" label="Home Search"></t-stepper></body>
+	<t-stepper min="0" max="100"></t-stepper></body>
 </html>
