--- a/demo/index.html
+++ b/demo/index.html
@@ -15,5 +15,10 @@
   <link rel="import" href="../../t-shared-components/theme.html">
 </head>
 <body>
-	<t-stepper min="0" max="100"></t-stepper></body>
+	<t-stepper min="0" max="100"></t-stepper>
+<t-stepper min="1" max="9" plural-label="Adults" singular-label="Adult" secondary-label="(12+ years)" name="adult" id="adult"></t-stepper>
+
+
+	</body>
+
 </html>
