--- a/t-stepper.html
+++ b/t-stepper.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 
 
@@ -7,7 +7,8 @@
   
 
 <dom-module id="t-stepper">
-    <style is="custom-style">
+    <template>
+    <style include="iron-flex">
       :host {
           display: block;
           font-family: var(--header-font-family, --primary-font-family);
@@ -91,7 +92,6 @@
       }
 
     </style>
-    <template>
         <div class="layout horizontal center">
           <div id="icon" hidden$="{{!hasIcon}}" restamp="true">
             <iron-icon icon="{{ico}}"></iron-icon>
