Fix Styled version of stepper

--- a/t-stepper.html
+++ b/t-stepper.html
@@ -54,7 +54,7 @@
       :host([styled]) #minus{
         order:0;
         border-right: 1px solid;
-
+        border-color: var(--form-underline-color, #e0e0e0);
       }
       :host([styled]) #add{
         order:3;
@@ -75,7 +75,7 @@
         flex: 2;
         border-top:1px solid;
         border-bottom: 1px solid;
-        border-color: var(--form-label-color, #bbbbbb);
+        border-color: var(--form-underline-color, #e0e0e0);
         text-align: right;
         padding: 5px;
       }
