--- a/t-stepper.html
+++ b/t-stepper.html
@@ -2,10 +2,6 @@
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../iron-icons/iron-icons.html">
 
-
-
-  
-
 <dom-module id="t-stepper">
     <template>
     <style include="iron-flex">
@@ -100,6 +96,7 @@
               <span>{{_label}}</span>
               &nbsp;
               <span class="secondaryLabel">{{secondaryLabel}}</span>
+              <content select=".price-secondary-label"></content>
           </div>
           <div id="space" class="flex" hidden$="{{styled}}" restamp="true">
           </div>
