--- a/demo/index.html
+++ b/demo/index.html
@@ -11,17 +11,10 @@
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-  <link rel="import" href="../t-stepper.html">
-  <link rel="import" href="../../t-shared-components/theme.html">
+  <link rel="import" href="demo-element.html">
 </head>
 <body>
-	<t-stepper min="0" max="100" plural-label="Adults" singular-label="Adult" secondary-label="(12+ years)"></t-stepper>
-<t-stepper min="1" max="9" plural-label="Adults" singular-label="Adult" secondary-label="(12+ years)" name="adult" id="adult"></t-stepper>
-<br>
-<t-stepper always-float-label min="1" max="9" plural-label="Adults" singular-label="Adult" secondary-label="(12+ years)" name="adult" id="adult"></t-stepper>
-<br>
-<t-stepper styled always-float-label min="1" max="9" plural-label="Adults" singular-label="Adult" secondary-label="(12+ years)" name="adult" id="adult"></t-stepper>
-
+	<demo-element></demo-element>
 
 	</body>
 
