--- a/t-stepper.html
+++ b/t-stepper.html
@@ -15,6 +15,9 @@
           user-select: none;  
           -webkit-tap-highlight-color: transparent;
       }
+      [hidden] {
+        display: none;
+      }
       #add,
       #minus{
         border: 1px solid ;
