--- a/t-stepper.html
+++ b/t-stepper.html
@@ -7,7 +7,7 @@
     <style include="iron-flex">
       :host {
           display: block;
-          font-family: var(--header-font-family, --primary-font-family);
+          font-family: var(--primary-font-family);
           color: var(--form-label-color, #bbbbbb);
           -webkit-user-select: none;  /* Chrome all / Safari all */
           -moz-user-select: none;     /* Firefox all */
@@ -16,7 +16,7 @@
           -webkit-tap-highlight-color: transparent;
       }
       [hidden] {
-        display: none;
+        display: none !important;
       }
       #add,
       #minus{
